--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,6 +10,18 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -31,7 +43,25 @@
 </string>
       </property>
       <property name="text">
-       <string>Papier / Kamień / Nożyce</string>
+       <string>Papier | Kamień | Nożyce</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="infoLabel">
+      <property name="font">
+       <font>
+        <family>Sitka Display</family>
+        <pointsize>20</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>-</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -52,7 +82,7 @@
        <string notr="true">color: rgb(170, 0, 0);</string>
       </property>
       <property name="text">
-       <string>Wynik: 0 : 0</string>
+       <string>Runda: 1 Wynik: 0 : 0</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -61,8 +91,23 @@
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
       <item>
        <widget class="QLabel" name="graczlabel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>50</height>
+         </size>
+        </property>
         <property name="font">
          <font>
           <family>Sitka Display</family>
@@ -79,6 +124,18 @@
       </item>
       <item>
        <widget class="QLabel" name="komplabel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>50</height>
+         </size>
+        </property>
         <property name="font">
          <font>
           <family>Sitka Display</family>
@@ -97,10 +154,22 @@
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
       <item>
        <widget class="QLabel" name="zdjgracz">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>250</height>
+         </size>
+        </property>
         <property name="text">
-         <string>zdjecie gracza</string>
+         <string/>
+        </property>
+        <property name="pixmap">
+         <pixmap resource="rsc.qrc">:/images/papierkamien/pytajnik.png</pixmap>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -109,8 +178,20 @@
       </item>
       <item>
        <widget class="QLabel" name="zdjkomp">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>250</height>
+         </size>
+        </property>
         <property name="text">
-         <string>zdjecie komputera</string>
+         <string/>
+        </property>
+        <property name="pixmap">
+         <pixmap resource="rsc.qrc">:/images/papierkamien/pytajnik.png</pixmap>
+        </property>
+        <property name="scaledContents">
+         <bool>false</bool>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -122,7 +203,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QPushButton" name="papier">
+       <widget class="QPushButton" name="papierBtn">
         <property name="font">
          <font>
           <family>Sitka Display</family>
@@ -135,7 +216,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="kamien">
+       <widget class="QPushButton" name="kamienBtn">
         <property name="font">
          <font>
           <family>Sitka Display</family>
@@ -148,7 +229,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="nozyce">
+       <widget class="QPushButton" name="nozyceBtn">
         <property name="font">
          <font>
           <family>Sitka Display</family>
@@ -162,20 +243,24 @@
       </item>
      </layout>
     </item>
+    <item>
+     <widget class="QPushButton" name="resetBtn">
+      <property name="font">
+       <font>
+        <family>Sitka Display</family>
+        <pointsize>20</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Reset</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="rsc.qrc"/>
+ </resources>
  <connections/>
 </ui>
